# cc-plugins

./: .gitignore  AGENTS.md  README.md  dprint.json  mise.toml
.claude-plugin/: marketplace.json
.github/workflows/: hub-release.yml  publish.yml
agents/: librarian.md  oracle.md  ui-engineer.md  worker.md
mcps/hub/: .gitignore  .goreleaser.yaml  CHANGELOG.md  README.md  go.mod  go.sum  main.go  mise.toml
mcps/hub/docs/: js-authoring.md
mcps/hub/internal/cli/: exec.go  helpers.go  inspect.go  invoke.go  list.go  remote.go  update.go
mcps/hub/internal/client/: manager.go  manager_test.go
mcps/hub/internal/js/: runtime.go  runtime_test.go
mcps/hub/internal/server/: integration_test.go  server.go  server_test.go
mcps/hub/internal/tools/: builtin_registry_test.go  exec.go  exec_tool_test.go  inspect.go  inspect_description.md  inspect_test.go  invoke_description.md  list.go  list_description.md  refresh.go  refresh_tools_test.go
mcps/hub/internal/transport/: factory.go
mcps/hub/scripts/: install.sh
mcps/mcp-executor/: .gitignore  CLAUDE.md  README.md  pyproject.toml
mcps/mcp-executor/src/mcp_executor/: __init__.py  cli.py  runtime.py
mcps/mcp-fs/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
mcps/mcp-fs/examples/: quick_start.py
mcps/mcp-fs/src/mcp_fs/: __init__.py  backend_manager.py  cli.py  mcp_server.py
mcps/mcp-hub/: AGENTS.md  CHANGELOG.md  README.md  biome.json  config.example.json  go.mod  main.go  package-lock.json  package.json  tsconfig.json
mcps/mcp-hub-go/: .gitignore  README.md  config.example.json  example-config-http-sse.json  go.mod  go.sum  main.go  mise.toml
mcps/mcp-hub-go/cmd/mcp-hub-go/: main.go
mcps/mcp-hub-go/docs/: js-authoring.md
mcps/mcp-hub-go/internal/cli/: helpers.go  inspect.go  invoke.go  list.go  remote.go  serve.go
mcps/mcp-hub-go/internal/client/: manager.go  manager_test.go
mcps/mcp-hub-go/internal/config/: config.go  config_test.go
mcps/mcp-hub-go/internal/js/: runtime.go  runtime_test.go
mcps/mcp-hub-go/internal/logging/: logger.go  logger_test.go
mcps/mcp-hub-go/internal/server/: exec_tool.md  integration_test.go  server.go  server_test.go
mcps/mcp-hub-go/internal/testing/: mock_server.go
mcps/mcp-hub-go/internal/tools/: builtin.go  builtin_registry_test.go  builtin_test.go  exec.go  exec_description.md  exec_tool_test.go  list.go  list_description.md  list_description_render.go  list_description_render_test.go  list_tool_test.go  refresh.go  refresh_description.md  refresh_tools_test.go
mcps/mcp-hub-js/: .npmignore  CHANGELOG.md  biome.json  package-lock.json  package.json
mcps/mcp-hub-js/src/: types.ts
mcps/mcp-hub-py/: AGENTS.md
mcps/mcp-hub/mcp-skill-gen/: SKILL.md
mcps/mcp-hub/scripts/: install.sh
mcps/mcp-hub/src/: index.ts  mcp-server.ts  types.ts
mcps/meta-mcp-server/: .gitignore  AGENTS.md  README.md  config.example.json  package-lock.json  package.json  tsconfig.json
mcps/meta-mcp-server/src/: index.ts  mcp-server.ts  types.ts
mcps/tools-executor/: README.md  main.py  pyproject.toml
mcps/tools-executor/src/tools_executor/: __init__.py  runtime.py
mcps/tools-executor/tools_executor/: __init__.py  cli.py
pi/: AGENTS.md  package.json
pi/extensions/subagent/: agents.ts  index.ts
plugins/mcp-tools-executor/: README.md  SKILLS.md
plugins/mcp-tools-executor/scripts/: init_tools.py
plugins/specs-dev/: README.md
plugins/specs-dev-skill/: SKILL.md
plugins/specs-dev-skill/references/: commit.md
plugins/specs-dev/agents/: codex-analyzer.md  task-implementer.md
plugins/specs-dev/commands/: commit.md  impl.md  plan.md
plugins/specs-plan/: SKILL.md
skills/: mcp-skill-gen
skills/changelog-automation/: SKILL.md
skills/chrome-devtools-automation/: SKILL.md
skills/codebase-explorer/: SKILL.md
skills/codex-analyze/: SKILL.md
skills/document-writer/: SKILL.md
skills/gemini-analyze/: SKILL.md
skills/mcp-chrome-devtools-automation/: SKILL.md  config.json
skills/mcp-exa-search/: SKILL.md
skills/mcp-grep-code-search/: SKILL.md
skills/mcp-jetbrains-ide/: SKILL.md
skills/mcp-skill-gen/: SKILL.md
skills/mcp-skill-gen/references/: skill-template.md
skills/python-script/: SKILL.md
skills/python-script/references/: script-template.md
skills/specs-dev/: SKILL.md
skills/specs-dev/references/: analyzer-agent.md  checklists.md  help.md  implementation-loop.md  implementer-agent.md  loop.md  plan-template.md  tasks-template.md
skills/web-search/: SKILL.md
skills/web-search/scripts/: web_search.py
(+53 files in other folders)
